<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MP3TagViewerActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewAudioFilePath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_no_file_loaded"
                android:text="@string/mp3_tag_viewer_file_path"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/buttonLoadAudioFile"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_load_audio_file_title" />

            <TextView
                android:id="@+id/textViewTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_title" />

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_title"
                android:inputType="text" />

            <TextView
                android:id="@+id/textViewAlbumLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_album" />

            <EditText
                android:id="@+id/editTextAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_album"
                android:inputType="text" />

            <TextView
                android:id="@+id/textViewArtistLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_artist" />

            <EditText
                android:id="@+id/editTextArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_artist"
                android:inputType="text" />

            <TextView
                android:id="@+id/textViewGenreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_genre" />

            <EditText
                android:id="@+id/editTextGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_genre"
                android:inputType="text" />

            <ImageView
                android:id="@+id/imageViewAlbumArt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hint_album_art"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>